# CharGer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGES.rst  Pair.py  README.md  Variant.py  acmg_guideline.html  analyze_charger_summary.py  autovivification.py  changelog.html  charger.py  chargerVariant.py  charger_lib.py  chargervariant.py  cli.html  contents.html  count_charGer_result.py  ctAPI.py  development.html  env.yaml  genindex.html  index.html  installation.html  liftover_CharGer_result.py  main.py  mypy.ini  objects.inv  prepare_inputs.html  py-modindex.html  pyproject.toml  restAPI.py  search.html  searchindex.js  setup.cfg  setup.py  test_class.py  tox.ini  tox_conda.ini
.doctrees/: acmg_guideline.doctree  changelog.doctree  cli.doctree  contents.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  prepare_inputs.doctree
.doctrees/internals/: acmg_modules.doctree  classifier.doctree  config.doctree  console.doctree  csq.doctree  custom_modules.doctree  index.doctree  io.doctree  result.doctree  variant.doctree
Demo/: BP1GeneList.txt  PP2GeneList.txt  demo.bed  demo.vcf  inheritanceGeneList.txt  runDemo.sh
Docker/: .dockerignore  Dockerfile  README.md
_modules/: index.html  typing.html
_modules/charger/: argtype.html  classifier.html  config.html  console.html  csq.html  io.html  result.html  variant.html
_modules/charger/acmg_modules/: pathogenic.html
_modules/charger/custom_modules/: pathogenic.html
_sources/: changelog.rst.txt  contents.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt
_sources/internals/: classifier.rst.txt  config.rst.txt  console.rst.txt  custom_modules.rst.txt  index.rst.txt
_static/: alabaster.css  custom.css
charger/: autovivification.py  charger.py  chargervariant.py
doc/: conf.py  index.rst
docker/: Dockerfile
docs/: acmg_guideline.rst  api.rst  cli.rst  conf.py  contents.rst  development.rst  index.rst  prepare_inputs.rst
docs/_static/: alabaster.css_t
docs/_templates/: about.html  navigation.html  slim_searchbox.html
docs/internals/: acmg_modules.rst  charger.rst  classifier.rst  config.rst  console.rst  csq.rst  custom_modules.rst  index.rst  io.rst  result.rst  variant.rst
internals/: acmg_modules.html  classifier.html  config.html  console.html  csq.html  custom_modules.html  index.html  io.html  result.html  variant.html
scripts/: analyze_charger_summary.py  count_charGer_result.py  debug_example.py  liftover_CharGer_result.py
src/charger/: __init__.py  acmg_modules.py  argtype.py  charger.py  classifier.py  config.py  console.py  csq.py  io.py  pathtype.py  result.py  variant.py
src/charger/acmg_modules/: __init__.py  pathogenic.py
src/charger/custom_modules/: __init__.py  pathogenic.py
tests/: conftest.py  test_argtypes.py  test_charger.py  test_chargervariant.py  test_config.py  test_console.py  test_io.py  test_pytest_examples.py  test_variant.py
tests/charger/: test_charger_internal_steps.py
tests/examples/: 10.1056_NEJMoa1508054_S4_AD_vep85.sorted.vcf.gz.csi  grch37_vep85_5_variants.vcf  grch38_brca2_ashkenazi_jewish_founder.vcf  grch38_vep95_50_variants.bcf  grch38_vep95_50_variants.bcf.csi  grch38_vep95_50_variants.info_fixed.vcf.gz.csi  grch38_vep95_50_variants.vcf.gz.csi
tests/examples/annotations/: clinvar_chrom_22_only.b37.tsv.gz.tbi
tests/test_charger/: test_internal_steps.py
tests/test_classifier/: test_clinvar_match.py  test_data_structure.py  test_internal_steps.py
tests/test_files/: example.csv
