[tool.poetry]
name = "charger"
version = "0.6.0"
description = "Characterization of germline variants"
authors = [
    "Liang-Bo Wang <liang-bo.wang@wustl.edu>",
    "Fernanda Martins Rodrigues <fernanda@wustl.edu>",
    "Adam D Scott <adamscott@wustl.edu>",
    "Kuan-lin Huang <kuan-lin.huang@wustl.edu>",
    "Amila Weerasinghe <amila@wustl.edu>",
]
maintainers = [
    "Liang-Bo Wang <liang-bo.wang@wustl.edu>",
    "Fernanda Martins Rodrigues <fernanda@wustl.edu>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ding-lab/CharGer"

[tool.poetry.scripts]
charger = 'charger.console:run'

[tool.poetry.dependencies]
python = ">=3.6"
loguru = "~0.4"
attrs = "~19.3"
cyvcf2 = "~0.11"
typing-extensions = {version = "~3.7", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "~5.2"
flake8 = "~3.7"
mypy = "~0.761"
black = "^19.10b0"
isort = "~4.3"
sphinx = "~2.4"
pre-commit = "~2.0"

[tool.isort]
line_length = 90
atomic = true
include_trailing_comma = true
not_skip = "__init__.py"
balanced_wrapping = true
multi_line_output = 3
known_third_party = ["attr", "cyvcf2", "loguru", "_pytest", "pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
