[tool.poetry]
name = "CharGer"
version = "0.6.0b1"
description = "Characterization of germline variants"
authors = [
    "Liang-Bo Wang <liang-bo.wang@wustl.edu>",
    "Fernanda Martins Rodrigues <fernanda@wustl.edu>",
    "Adam D Scott <adamscott@wustl.edu>",
    "Kuan-lin Huang <kuan-lin.huang@wustl.edu>",
    "Amila Weerasinghe <amila@wustl.edu>",
]
maintainers = [
    "Liang-Bo Wang <liang-bo.wang@wustl.edu>",
    "Fernanda Martins Rodrigues <fernanda@wustl.edu>",
]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://ding-lab.github.com/CharGer"
repository = "https://github.com/ding-lab/CharGer"
documentation = "https://ding-lab.github.com/CharGer"
keywords = [
    "germline",
    "variant",
    "classifier",
    "genomics",
    "bioinformatics",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
include = ['CHANGES.rst']

[tool.poetry.scripts]
charger = 'charger.console:run'

# Version constraints spec: https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = ">=3.7,<4.0"
loguru = "~0.4"
attrs = "^21.0"
cyvcf2 = "^0.30.0"
typing-extensions = {version = "~3.10", python = "<3.8"}
pysam = "^0.16.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "~3.9"
mypy = "~0.770"
black = "^21.9b0"
isort = "^5.9.3"
sphinx = "~4.2"
sphinx-issues = "^1.2.0"
pre-commit = "^2.0.0"
importlib_metadata = {version = "^1.5.0", python = "<3.8"}
sphinx-argparse = "^0.3.1"
ghp-import = "^2.0.1"

[tool.isort]
line_length = 90
atomic = true
include_trailing_comma = true
not_skip = "__init__.py"
balanced_wrapping = true
multi_line_output = 3
known_third_party = ["attr", "cyvcf2", "loguru", "pysam", "_pytest", "pytest", "typing_extensions"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
